[project]
name = "src"
version = "0.1.0"
description = "Ihwa Hussain Portfolio"
authors = [
    {name = "Ihwa Hussain",email = "fh828@nyu.edu"}
]
license = {text = "Unlicense"}
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
flask-restx="^1.1.0"
retry = "^0.9.2"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
honcho = "^1.1.0"
pylint = "^3.0.2"
flake8 = "^6.1.0"
black = "^23.10.1"
pytest = "^7.4.3"
pytest-pspec = "^0.0.4"
pytest-cov = "^4.1.0"
coverage = "^7.3.2"
httpie = "^3.2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"